objects/DMAPP__Dealmaker_Smart_OM_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Dealmaker Smart OM behaviour</description>
    <fields>
        <fullName>DMAPP__Competitor_Class_List_Provider__c</fullName>
        <description>This field allows an administrator to specify a class which will be used to retrieve a list of competitors associated with an opportunity should the customer be using a source other than the standard competitor picklist.</description>
        <inlineHelpText>This field allows an administrator to specify a class which will be used to retrieve a list of competitors associated with an opportunity should the customer be using a source other than the standard competitor picklist.</inlineHelpText>
        <label>Competitor Class List Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Add_Competitor_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, prevents users from adding a competitor to an opportunity (in the Competitive Strategy page).</description>
        <inlineHelpText>If checked, prevents users from adding a competitor to an opportunity (in the Competitive Strategy page).</inlineHelpText>
        <label>Disable Add Competitor Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Competitor_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, prevent users from creating a new competitor</description>
        <inlineHelpText>If checked, prevents users from creating a new competitor. When adding a competitor to an opportunity (in the Competitive Strategy page) users will only be able to select from a pre-existing set of competitors.</inlineHelpText>
        <label>Disable Competitor Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_PRIME_Type_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked in a customer account the Actions tab should not show the &apos;PRIME Action Type&apos; column and obviously this is not shown when the user is creating an action (given the action create is done inline). So the PRIME type is not mandatory with this setting checked</description>
        <inlineHelpText>If this is checked in a customer account the Actions tab should not show the &apos;PRIME Action Type&apos; column and obviously this is not shown when the user is creating an action (given the action create is done inline)</inlineHelpText>
        <label>Hide PRIME Type Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Playbook_on_Launchpad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field controls whether to hide the Playbook icon on the Dealmaker Launchpad in the Opportunity Detail screen (only relevant where users have a license to Playbook). You may choose to hide this if you opt to add the Playbook Launchpad Visualforce page.</description>
        <inlineHelpText>This field controls whether to hide the Playbook icon on the Dealmaker Launchpad in the Opportunity Detail screen (only relevant where users have a license to Playbook). You may choose to hide this if you opt to add the Playbook Launchpad Visualforce page</inlineHelpText>
        <label>Hide Playbook on Launchpad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__List_All_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked in a customer account the Actions tab in OM should list all actions associated with the opportunity - not just PRIME actions. Show blank value for actions which don&apos;t have a PRIME type</description>
        <inlineHelpText>If this is checked in a customer account the Actions tab in OM should list all actions associated with the opportunity - not just PRIME actions. Show blank value for actions which don&apos;t have a PRIME type</inlineHelpText>
        <label>List All Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__PartnerCEBOnePagerLocation__c</fullName>
        <description>The location of the Partner CEB One Pager Print preview page.</description>
        <inlineHelpText>The location of the Partner CEB One Pager Print preview page.</inlineHelpText>
        <label>PartnerCEBOnePagerLocation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Assessment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether or not the Assessment screen is shown</description>
        <inlineHelpText>This field controls whether or not the Assessment screen is shown</inlineHelpText>
        <label>Show Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Call_Planner__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is deprecated. The visibility of Smart Call Planner is controlled by license allocation.</description>
        <inlineHelpText>This field is deprecated. The visibility of Smart Call Planner is controlled by license allocation.</inlineHelpText>
        <label>Show Call Planner (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Coach__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls where or not the Dealmaker Coach screen is shown</description>
        <inlineHelpText>This field controls where or not the Dealmaker Coach screen is shown</inlineHelpText>
        <label>Show Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Collaboration_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether or not the Dealmaker Collaboration Map is shown</description>
        <inlineHelpText>This field controls whether or not the Dealmaker Collaboration Map is shown</inlineHelpText>
        <label>Show Insight Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Competitive_Strategy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Dealmaker Competitive Strategy Screen is shown</description>
        <inlineHelpText>This field controls whether the Dealmaker Competitive Strategy Screen is shown</inlineHelpText>
        <label>Show Competitive Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Decision_Criteria__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Dealmaker Decision Criteria Screen is shown</description>
        <inlineHelpText>This field controls whether the Dealmaker Decision Criteria Screen is shown</inlineHelpText>
        <label>Show Decision Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Milestones_Scores__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the milestones tab should show the score values instead of question counts.</description>
        <label>Show Milestones Scores</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Milestones__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Dealmaker Milestones screen is shown</description>
        <inlineHelpText>This field controls whether the Dealmaker Milestones screen is shown</inlineHelpText>
        <label>Show Milestones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Political_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Dealmaker Political Map screen is shown</description>
        <inlineHelpText>This field controls whether the Dealmaker Political Map screen is shown</inlineHelpText>
        <label>Show Political Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Prime_Actions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Dealmaker Prime Actions screen is shown</description>
        <inlineHelpText>This field controls whether the Dealmaker Prime Actions screen is shown</inlineHelpText>
        <label>Show PRIME Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tab_Name_List__c</fullName>
        <description>This setting allows us to select the names and order of the Dealmaker Tabs and Launchpad items. The value of this field should be a comma separated list of Tab names. This field should only be used by TAS group administrators.</description>
        <inlineHelpText>This setting allows us to select the names and order of the Dealmaker Tabs and Launchpad items. The value of this field should be a comma separated list of Tab names. This field should only be used by TAS group administrators.</inlineHelpText>
        <label>Tab Name List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Smart OM Settings</label>
</CustomObject>